<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:tools="http://schemas.android.com/tools"
    android:elevation="100dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_weight="15"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/pdimg"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                android:src="@drawable/flogo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:scaleType="fitCenter">
            </ImageView>

            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:layout_toRightOf="@id/pdimg"
                android:text="@string/name"
                android:textColor="#000000"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/name"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="05dp"
                android:layout_toRightOf="@id/pdimg"
                android:maxLines="1"
                android:text="@string/title"
                android:textSize="10sp"
                android:textStyle="bold"
                tools:ignore="SmallSp" />

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/title"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="05dp"
                android:layout_toRightOf="@id/pdimg"
                android:maxLines="1"
                android:text="@string/decription"
                android:textSize="10sp"
                android:textStyle="bold"
                tools:ignore="SmallSp" />

            <TextView
                android:id="@+id/price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/description"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="6dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="05dp"
                android:layout_toRightOf="@id/pdimg"
                android:text="@string/price"
                android:textSize="10sp"
                android:textStyle="bold"
                tools:ignore="SmallSp" />

        </RelativeLayout>
        </LinearLayout>
</androidx.cardview.widget.CardView>